--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,15 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/jdic.jar"/>
+	<classpathentry kind="lib" path="lib/djnative/ckeditor_3.0.1.zip"/>
+	<classpathentry kind="lib" path="lib/djnative/DJNativeSwing-SWT.jar"/>
+	<classpathentry kind="lib" path="lib/djnative/DJNativeSwing.jar"/>
+	<classpathentry kind="lib" path="lib/djnative/FCKeditor_2.6.3.zip"/>
+	<classpathentry kind="lib" path="lib/djnative/jna_WindowUtils.jar"/>
+	<classpathentry kind="lib" path="lib/djnative/jna-4.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/djnative/MozillaInterfaces-1.8.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/djnative/swt.win32.win32.x86_64.jar"/>
+	<classpathentry kind="lib" path="lib/djnative/SyntaxHighlighter_1.5.1.zip"/>
+	<classpathentry kind="lib" path="lib/djnative/TinyMCE_3.4.3.2.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
